using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants
{
    public const string ANIM_PARAM_SPEED = "speed";
    public const string ANIM_PARAM_ROLL = "isRoll";
    public const string ANIM_PARAM_RUN = "isRun";

    public const string ANIM_CLIPNAME_ROLL = "RollForward";

    public const int LAYER_FACILITY = 1 << 8;
}
